# LanguageToolkit

./: .gitignore  LICENSE  Makefile  README.rst  environment.yaml  logger.py  pyproject-OLD.toml  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  test_path.txt
.github/workflows/: build_and_push.yml
at_nlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
at_nlp/at_nlp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
at_nlp/filters/: clusters.json  labeling_functions.py  preprocessor_stack.py  profile.html  string_filter.py  string_filtering.ipynb  test_class.pkl  train_test_model.py
at_nlp/filters/.ipynb_checkpoints/: string_filtering-checkpoint.ipynb
at_nlp/filters/test_model2aac/: vectorizer.pkl
at_nlp/filters/test_model9345/: label_model.pkl
at_nlp/retrieval_augmented_generation/: .dockerignore  .env  .gitignore  acronyms.csv  environment.yml  logstash.conf
at_nlp/retrieval_augmented_generation/utils/: build_containers.py
docs/source/: conf.py  index.rst  retrieval_augmented_generation.rst
model07e1/: string_filter.pkl
src/at_nlp/: logger.py
src/at_nlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/at_nlp/filters/: preprocessor_stack.py  string_filter.py  string_filtering.ipynb  train_test_model.py  weak_learner_collection.py
src/at_nlp/retrieval_augmented_generation/: docker-compose.yml  example_request.md  filebeat.yml  test.py
src/language_toolkit/: utils.py
src/language_toolkit/filters/: labeling_function_collection.py  preprocessor_stack.py  string_filter.py  string_filtering.ipynb  weak_learner_collection.py
src/language_toolkit/hyperlink_remover/: hyperlink_remover.py
src/language_toolkit/retrieval_augmented_generation/: config.toml
src/language_toolkit/tests/: example_functions.py  pretrained_test_model.py  (+4 more)
test_model/: string_filter.pkl
tests/: automated_test_string_filter.py  build_string_filter_tests.py  conftest.py  example_functions.py  simple_test_model.py  test_data.py  test_filters.py  test_preprocessor_stack.py  test_string_filter.py  test_string_filter_functional.py  test_weak_learner_collection.py
tests/collection_tests/: test_preprocessor_stack.py  test_weak_learner_collection.py
tests/data/: test.txt  test_config.csv
tests/pickled_models/: vectorizer.pkl
tests/string_filter_tests/: automated_test_string_filter.py  build_string_filter_tests.py  test_string_filter.py  test_string_filter_functional.py
tests/test_model/: template_miner.pkl
(+19 files in other folders)
