[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "language_toolkit"
version = "0.0.1a"
license = { text = "MIT License" }
requires-python = ">=3.8"
dependencies = [
    "pydantic",
    "scikit-learn",
    "pandas",
    "numpy",
    "tqdm",
#    "dask-expr",
    "pyarrow",
    "dill",
    "drain3",
    "rich",
    "snorkel",
    "dask",
    "loguru"
]

[project.optional-dependencies]
doc = ["sphinx", "sphinxcontrib.katex", "sphinx_copybutton", "myst-parser", "pydata-sphinx-theme"]