[tool.poetry]
name = "language-toolkit"
version = "0.1.0"
description = "A toolkit for working with Natural Language Processing projects."
authors = ["Athena AIML Contributors"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Dependencies

[tool.poetry.dependencies]
python = "3.8.*"
pydantic = "*"
scikit-learn = "*"
pandas = "*"
numpy = "*"
tqdm = "*"
pyarrow = "*"
click = "*"
dill = "*"
drain3 = "*"
joblib = "*"
jupyterlab = "*"
loguru = "*"
rich = "*"
snorkel = "*"

[tool.poetry.group.testing.dependencies]
pytest = "*"


# Optional Dependencies

[tool.poetry.group.documentation]
optional = true

[tool.poetry.group.documentation.dependencies]
sphinx = "*"
sphinxcontrib-katex = "*"
sphinx-copybutton = "*"
myst-parser = "*"
pydata-sphinx-theme = "*"

# [tool.poetry.group.multi_processing]
# optional = true

# [tool.poetry.group.multi_processing.dependencies]
# dask = "*"
# dask-expr = "*"


